<resources>

    <string name="app_name">Coyo</string>
    <string name="email">Masukan Username Anda</string>
    <string name="pass">Masukan sandi Anda</string>
    <string name="pass2">Konfirmasi sandi Anda</string>
    <string name="ctbc_judul">CTBC Bank KTA\nDana Cinta</string>
    <string name="dbs_judul">Bank DBS Dana Bantuan\nSahabat</string>
    <string name="Commonwealth_judul">Commonwealth BizLoan</string>
    <string name="KTAKEB_judul">KTA KEB Hana Bank</string>
    <string name="bunga_ctbc">15,48%</string>
    <string name="pertahun">per tahun</string>
    <string name="jumlah_pinjaman">Jumlah Pinjaman : hingga</string>
    <string name="pembiayaan"> Rp200 juta</string>
    <string name="bunga_dbs">10,56% per tahun\n Jumlah Pinjaman : hingga Rp300 juta</string>
    <string name="bunga_common">13,08% per tahun\n Jumlah Pinjaman : hingga Rp500 juta</string>
    <string name="bunga_KTAKEB">11,40% per tahun\n Jumlah Pinjaman : hingga Rp200 juta</string>
    <string name="desc_ctbc">Butuh dana pinjaman? KTA Dana Cinta dari Bank CTBC memberikan anda pinjaman dengan proses cepat, angsuran tetap, dan suku bunga rendah. Dengan nilai pinjaman hingga Rp200 juta, KTA Dana cinta cocok untuk keperluan bisnis anda..</string>
    <string name="title_activity_bottom">bottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>
    <string name="title_chat">Chat</string>
    <string name="title_kta">CTBC Bank KTA Dana Cinta</string>
    <string name="description_asuransi">15,48%\n Jumlah Pinjaman : hingga Rp200 juta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="ctbc_ulasan">49 Ulasan</string>
    <string name="ctbc_rating">Sangat Bagus</string>
    <string name="suku_bunga">Suku Bunga / APR</string>
    <string name="biaya_proses">Biaya Proses</string>
    <string name="biaya_administrasi">Biaya Administrasi</string>
    <string name="biaya_asuransi">Biaya Asuransi</string>
    <string name="biaya_provisi">Biaya Provosi</string>
    <string name="bea_materai">Bea Materai</string>
    <string name="biaya_pelunasan_awal">Biaya Pelunasan Awal</string>
    <string name="biaya_keterlambatan">Biaya Keterlambatan</string>
    <string name="minimum_pendapatan">Minimum pendapatan bulanan</string>
    <string name="usia_minimum">Usia Minimum</string>
    <string name="usia_maksimum">Usia Maksimum</string>
    <string name="siapa_saja">Siapa Saja yang Bisa Mendaftar</string>
    <string name="hint_pesan">\u0020\u0020 Tulis Pesan Anda...</string>
    <string name="desc_ctbc_long">Butuh dana pinjaman? KTA Dana Cinta dari Bank CTBC memberikan anda \n pinjaman dengan proses cepat, angsuran tetap, dan suku bunga rendah. \n Dengan nilai pinjaman hingga Rp200 juta, KTA Dana cinta cocok untuk keperluan bisnis anda.\nBerbagai keperluan bisa mulai Anda wujudkan dari sekarang dengan kemudahan pinjaman\ntunai dari Kredit tanpa agunan (KTA) Dana Cinta Bank CTBC memberikan Anda kemudahan untuk mengajukan KTA untuk kebutuhan finansial.\nMulai dari berbisnis, merenovasi rumah impian, memberikan pendidikan yang terbaik bagi anak Anda hingga menikmati liburan\n bisa Anda realisasikan dengan pengajuan yang mudah untuk mendapatkan pinjaman tunai dari produk ini </string>

    <string name="nama_profile">Leskantara</string>
    <string name="nomor_profile">082208220822</string>
    <string name="email_profile">leskantara@coyo.com</string>
    <string name="pekerjaan_profile">App Developer</string>
</resources>
