<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context=".View.Activity.DetailActivity"
    android:background="#FFFFFF">

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/sliderView"
        android:layout_width="350sp"

        android:layout_height="190sp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/hero"
        app:layout_constraintBottom_toTopOf="@+id/tvDetailTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.smarteist.autoimageslider.SliderView>

        <Button
            android:id="@+id/btnBanding"
            android:layout_width="205sp"
            android:layout_height="50sp"
            android:background="@drawable/btn_bandingkan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAjukan"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnAjukan"
            android:layout_width="207sp"
            android:layout_height="50sp"
            android:background="@drawable/btn_ajukan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnBanding" />

    <TextView
        android:id="@+id/tvDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/ctbc_judul"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliderView" />

    <TextView
        android:id="@+id/tvDetailSkb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bunga_ctbc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvDetailTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle"
        android:textSize="12sp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailSkb">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="25sp"
            android:layout_height="40sp"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            app:srcCompat="@drawable/axa_rating" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ctbc_ulasan" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ctbc_ulasan"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <Button
        android:id="@+id/button14"
        android:layout_width="97sp"
        android:layout_height="26sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_back"
        app:layout_constraintBottom_toTopOf="@+id/sliderView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        style="?android:attr/borderlessButtonStyle" /><![CDATA[/>





    ]]>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="348dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="152dp"
        android:maxLines="1"
        android:text="@string/desc_ctbc_long"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailDesc"
        app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="79dp"
            android:layout_height="21dp"
            android:text="Lanjut.."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1">

        </TextView>

        <TextView
        android:id="@+id/tvDetailDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginTop="8dp"
        android:text="Deskripsi"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pertahun"
        app:layout_constraintStart_toEndOf="@+id/tvDetailSkb"
        app:layout_constraintTop_toTopOf="@+id/tvDetailSkb"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_pinjaman"
        app:layout_constraintStart_toStartOf="@+id/tvDetailSkb"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailSkb"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tvPembiayaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/pembiayaan"
        app:layout_constraintEnd_toEndOf="@+id/sliderView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>