<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="280sp"
                android:background="@color/colorPrimary"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="bottom|center"
                app:expandedTitleMarginBottom="70sp"
                app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.TitleSize"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30sp"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:tint="#BB3E50B4"
                    app:civ_border_color="@color/colorCoyo"
                    app:civ_border_width="5sp"
                    app:layout_collapseMode="parallax"
                    android:src="@drawable/foto_profile"
                    />


            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:behavior_overlapTop="69sp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/data_diri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="4sp"
                    app:cardElevation="4sp"
                    app:contentPaddingBottom="16sp"
                    app:contentPaddingLeft="16sp"
                    app:contentPaddingRight="16sp"
                    app:contentPaddingTop="16sp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/image_user"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_person_24dp"
                                android:tint="@color/colorCoyo"/>

                            <TextView
                                android:id="@+id/nama_profil"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="14sp"
                                android:layout_toEndOf="@+id/image_user"
                                tools:ignore="RtlCompat"
                                android:text="@string/nama_profile"/>


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium">

                            <ImageView
                                android:id="@+id/image_phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_call_24dp"
                                android:tint="@color/colorCoyo"/>

                            <TextView
                                android:id="@+id/nomor_telepon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="14sp"
                                android:layout_toEndOf="@+id/image_phone"
                                tools:ignore="RtlCompat"
                                android:text="@string/nomor_profile"/>


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium">

                            <ImageView
                                android:id="@+id/image_mail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_email_24dp"
                                android:tint="@color/colorCoyo"/>

                            <TextView
                                android:id="@+id/email_profil"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="14sp"
                                android:layout_toEndOf="@+id/image_mail"
                                tools:ignore="RtlCompat"
                                android:text="@string/email_profile"/>


                        </RelativeLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/pekerjaan_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginBottom="@dimen/spacing_large"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="4sp"
                    app:cardElevation="4sp"
                    app:contentPaddingBottom="16sp"
                    app:contentPaddingLeft="16sp"
                    app:contentPaddingRight="16sp"
                    app:contentPaddingTop="16sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/image_gender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:src="@drawable/ic_business_24dp"
                                android:tint="@color/colorCoyo" />

                            <TextView
                                android:id="@+id/pekerjaan_profil"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="14sp"
                                android:layout_toEndOf="@+id/image_gender"
                                tools:ignore="RtlCompat"
                                android:text="@string/pekerjaan_profile"/>


                        </RelativeLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</layout>